@@ -1,10 +1,14 @@
 opsiclientd (4.0.84) UNRELEASED; urgency=medium
 
+  [ Erol Ueluekmen ]
   * exclude_product_group_ids and include_product_group_ids added.
   * Putting quotation marks around the action_processor_starter.exe to
     avoid unwanted behaviour.
 
- -- Erol Ueluekmen <e.ueluekmen@uib.de>  Sat, 07 Feb 2015 01:39:33 +0100
+  [ Niko Wenselowski ]
+  * Windows 8.1: Sleeping a short time before triggering the reboot.
+
+ -- Niko Wenselowski <n.wenselowski@uib.de>  Tue, 18 Aug 2015 17:28:14 +0200
 
 opsiclientd (4.0.82) stable; urgency=low
 
